--- a/new_app/vite-project/package.json
+++ b/new_app/vite-project/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.13.6",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/three": "^0.154.0",
     "bootstrap": "^5.3.0",
     "bufferutil": "^4.0.7",
     "eslint": "^8.0.1",
@@ -23,24 +25,26 @@
     "pnpm": "^8.6.10",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-d3-library": "^1.1.8",
     "react-dom": "18.2.0",
     "react-plotly.js": "^2.6.0",
     "react-tooltip": "^5.18.1",
     "sass": "^1.64.1",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
+    "three": "^0.155.0",
     "typescript": "*",
     "utf-8-validate": "^6.0.3",
     "ws": "^8.13.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.0",
-    "vite": "^4.4.5",
-    "@vitejs/plugin-react": "^4.0.3"
+    "vite": "^4.4.5"
   }
 }
