--- a/new_app/vite-project/package.json
+++ b/new_app/vite-project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.80.0",
     "@react-three/fiber": "^8.13.6",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
