--- a/new_app/vite-project/package.json
+++ b/new_app/vite-project/package.json
@@ -18,6 +18,7 @@
     "@types/three": "^0.154.0",
     "bootstrap": "^5.3.0",
     "bufferutil": "^4.0.7",
+    "chart.js": "^4.3.3",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.2",
     "mathjs": "^11.9.1",
@@ -26,6 +27,7 @@
     "pnpm": "^8.6.10",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-d3-library": "^1.1.8",
     "react-dom": "18.2.0",
     "react-plotly.js": "^2.6.0",
