--- a/new_app/vite-project/package.json
+++ b/new_app/vite-project/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "13.4.2",
     "mathjs": "^11.9.1",
     "next": "13.4.3",
+    "node-pid-controller": "^1.0.1",
     "plotly.js": "^2.25.0",
     "pnpm": "^8.6.10",
     "react": "18.2.0",
